# car-price-predictor

./: .gitignore  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run_all.bat  streamlit_app.py  tox.ini  train.py
.github/workflows/: ci.yml
Docker/: Dockerfile  supervisord.conf
app/: config.yaml  logger.py  pipeline.py  streamlit_app.py
app/api/: main.py
app/model/: model.pkl  results.json
requirements/: dev_requirements.txt  requirements.txt  test_requirements.txt
tests/: test_api.py
