[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-price-predictor"
description = "ML-сервис для предсказания рыночной цены автомобиля на основе характеристик."
version = "0.1.0"
authors = [
    { name = "Катызина Анастасия", email = "m2000743@edu.misis.ru" },
    { name = "Фам Анастасия", email = "m2004149@edu.misis.ru" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "streamlit>=1.30.0",
    "uvicorn>=0.23.0",
    "catboost>=1.2.2",
    "optuna>=3.6.0",
    "pytest>=8.0.0",
    "joblib>=1.3.2",
    "pydantic>=2.0",
    "httpx>=0.27.0",
]

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "tox",
]

[project.urls]
Homepage = "https://github.com/anastasiafam/car-price-predictor"

[tool.setuptools]
packages = {find = {exclude = ["tests"]}}
include-package-data = true
